--- a/Application/VysiChart/src/vysichart/ConfigureDependants.form
+++ b/Application/VysiChart/src/vysichart/ConfigureDependants.form
@@ -205,6 +205,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Close"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCloseActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JSeparator" name="jSeparator2">
         </Component>
